# web-scrapping-backend-py

./: .gitignore  main.py  pyproject.toml
app/: main.py
app/db/: supabase.py
app/models/: Image.py  Interest_Point.py  Kriging.py  Map_Resources.py  Property.py  Property_Type.py  propiedad.py
app/routers/: C21_Router.py  Infocasas_Router.py  Interest_Point_Router.py  Kriging_Router.py  Map_Resources_Router.py  Property_Router.py  Property_Type_Router.py  Remax_Rounter.py  Remax_Router.py  properties_loader.py
app/schemas/: Property.py
