[project]
name = "web-scrapping-backend-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "geoalchemy2>=0.18.4",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "supabase>=2.28.0",
    "uvicorn>=0.41.0",
]
